--- a/Websites/requirements.txt
+++ b/Websites/requirements.txt
@@ -1,8 +1,11 @@
+urllib3
 splinter
 bs4
 pandas
 datetime
 pymongo
-flask_pymongo
-dateutil
-flask
+pymongo[tls]
+pymongo[srv]
+dnspython
+certifi
+Flask==1.1.2
